fix: changes after 4.1 review: now timer goes down from 05:00, remove unwanted shifts of counter

--- a/source/scss/blocks/game.scss
+++ b/source/scss/blocks/game.scss
@@ -78,6 +78,7 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: 0;
+  width: 90px;
   opacity: 0;
   transform: scale(0.8);
   transition:
